fix: resolve issue #1271

--- a/.github/workflows/maintenance.yml
+++ b/.github/workflows/maintenance.yml
@@ -6,33 +6,26 @@ on:
   workflow_dispatch:
 
 permissions:
-  contents: read
+  contents: write
+  issues: write
+  pull-requests: write
 
 jobs:
   maintenance:
     name: Repository Cleanup
     runs-on: ubuntu-latest
     timeout-minutes: 30
-    permissions:
-      issues: write
-      pull-requests: write
-      contents: write
-
-    outputs:
-      stale-items: ${{ steps.stale.outputs.total-items }}
-      locked-items: ${{ steps.lock.outputs.total-items }}
 
     steps:
       - name: 🔒 Harden Runner
-        uses: step-security/harden-runner@v2
+        uses: step-security/harden-runner@63c24ba6bd7ba022e95695ff85de572c04a18142 # v2.7.0
         with:
           egress-policy: audit
 
       - name: 🧹 Process Stale Items
         id: stale
-        uses: actions/stale@v9
+        uses: actions/stale@5bef64f19d7facfb25b37b414482c7164d639639 # v9.1.0
         with:
-          # Issue Configuration
           stale-issue-message: |
             This issue has been automatically marked as stale due to 30 days of inactivity.
             It will be closed in 5 days if no further activity occurs.
@@ -44,7 +37,6 @@ jobs:
             This issue has been closed due to inactivity.
             Please reopen if still relevant.
 
-          # PR Configuration
           stale-pr-message: |
             This PR has been marked as stale due to 45 days of inactivity.
             It will be closed in 10 days if no further activity occurs.
@@ -55,17 +47,14 @@ jobs:
             This PR has been closed due to inactivity.
             Feel free to reopen if you'd like to continue working on it.
 
-          # Timing
           days-before-issue-stale: 30
           days-before-pr-stale: 45
           days-before-issue-close: 5
           days-before-pr-close: 10
 
-          # Labels
           stale-issue-label: stale
           stale-pr-label: stale
 
-          # Exemptions
           exempt-issue-labels: |
             security
             pinned
@@ -76,13 +65,12 @@ jobs:
             pinned
             dependencies
 
-          # Additional Settings
           delete-branch: true
           enable-statistics: true
 
       - name: 🔐 Lock Inactive Threads
         id: lock
-        uses: dessant/lock-threads@v5
+        uses: dessant/lock-threads@1bf7ec25051fe7c00bdd17e6a7cf3d7bfb7dc771 # v5.0.1
         with:
           issue-inactive-days: 182 # 6 months
           pr-inactive-days: 90 # 3 months
@@ -92,7 +80,6 @@ jobs:
           pr-comment: |
             This PR has been locked due to 3 months of inactivity.
             Please open a new PR if you want to make similar changes.
-          process-only: issues, pulls
           log-output: true
           exclude-any-issue-labels: |
             keep-unlocked
@@ -104,44 +91,38 @@ jobs:
 
       - name: 📊 Generate Report
         if: always()
-        uses: actions/github-script@v7
+        uses: actions/github-script@60a0d83039c74a4aee543508d2ffcb1c3799cdea # v7.0.1
         with:
           script: |
-            const stats = {
-              stale: {
-                issues: parseInt('${{ steps.stale.outputs.stale-issues-count }}') || 0,
-                prs: parseInt('${{ steps.stale.outputs.stale-prs-count }}') || 0,
-                closed: parseInt('${{ steps.stale.outputs.closed-issues-count }}') || 0
-              },
-              locked: {
-                total: parseInt('${{ steps.lock.outputs.locked-issues }}') || 0,
-                skipped: parseInt('${{ steps.lock.outputs.skipped-issues }}') || 0
-              }
+            const staleStats = {
+              issues: parseInt('${{ steps.stale.outputs.stale-issues-count }}') || 0,
+              prs: parseInt('${{ steps.stale.outputs.stale-prs-count }}') || 0,
+              closed: parseInt('${{ steps.stale.outputs.closed-issues-count }}') || 0
+            };
+
+            const lockStats = {
+              total: parseInt('${{ steps.lock.outputs.locked-issues }}') || 0,
+              skipped: parseInt('${{ steps.lock.outputs.skipped-issues }}') || 0
             };
 
             const report = `## 🧹 Maintenance Report
 
             ### Stale Items
-            - Issues marked stale: ${stats.stale.issues}
-            - PRs marked stale: ${stats.stale.prs}
-            - Items closed: ${stats.stale.closed}
+            - Issues marked stale: ${staleStats.issues}
+            - PRs marked stale: ${staleStats.prs}
+            - Items closed: ${staleStats.closed}
 
             ### Locked Items
-            - Items locked: ${stats.locked.total}
-            - Items skipped: ${stats.locked.skipped}
+            - Items locked: ${lockStats.total}
+            - Items skipped: ${lockStats.skipped}
 
             ### Configuration
             - Issue stale period: 30 days
             - PR stale period: 45 days
             - Issue lock period: 182 days
-            - PR lock period: 90 days
+            - PR lock period: 90 days`;
 
-            ### Actions Taken
-            ${stats.stale.closed > 0 ? '- Closed stale items\n' : ''}
-            ${stats.locked.total > 0 ? '- Locked inactive threads\n' : ''}
-            `;
-
-            if (stats.stale.closed > 0 || stats.locked.total > 0) {
+            if (staleStats.closed > 0 || lockStats.total > 0) {
               await github.rest.issues.create({
                 ...context.repo,
                 title: `Maintenance Report ${new Date().toISOString().split('T')[0]}`,
@@ -152,16 +133,17 @@ jobs:
 
       - name: 📢 Notify Team
         if: always()
-        uses: actions/github-script@v7
+        uses: actions/github-script@60a0d83039c74a4aee543508d2ffcb1c3799cdea # v7.0.1
         with:
           script: |
-            const total = parseInt('${{ steps.stale.outputs.closed-issues-count }}') +
-                         parseInt('${{ steps.lock.outputs.locked-issues }}');
+            const closedItems = parseInt('${{ steps.stale.outputs.closed-issues-count }}') || 0;
+            const lockedItems = parseInt('${{ steps.lock.outputs.locked-issues }}') || 0;
+            const totalProcessed = closedItems + lockedItems;
 
-            if (total > 0) {
+            if (totalProcessed > 0) {
               const message = `### 🧹 Maintenance Complete
 
-              - Items processed: ${total}
+              - Items processed: ${totalProcessed}
               - Check the latest maintenance report for details
 
               [View Report](${process.env.GITHUB_SERVER_URL}/${process.env.GITHUB_REPOSITORY}/issues?labels=maintenance)`;
