--- a/.github/workflows/scorecard.yml
+++ b/.github/workflows/scorecard.yml
@@ -77,7 +77,7 @@ jobs:
         id: scorecard
         uses: ossf/scorecard-action@dc50aa9510b46c811795eb24b2f1ba02a914e534 # v2.3.3
         with:
-          results_file: ${{ github.workspace }}/scorecard.sarif
+          results_file: scorecard.sarif
           results_format: sarif
           publish_results: true
 
