--- a/.github/workflows/scorecard.yml
+++ b/.github/workflows/scorecard.yml
@@ -1,4 +1,3 @@
----
 # SPDX-FileCopyrightText: Open Source Security Foundation (OpenSSF)
 # SPDX-License-Identifier: Apache-2.0
 
@@ -55,12 +54,6 @@ jobs:
     permissions:
       security-events: write # Required for SARIF uploads
       id-token: write # Needed to publish results with Scorecard
-      issues: write # Allows opening issues if needed
-      pull-requests: write # For label management
-
-    outputs:
-      score: ${{ steps.scorecard.outputs.overall-score }}
-      high-risks: ${{ steps.process.outputs.high-risks }}
 
     steps:
       - name: 🔒 Harden Runner
@@ -81,13 +74,31 @@ jobs:
           results_format: sarif
           publish_results: true
 
+      - name: 📤 Upload SARIF Results
+        uses: actions/upload-artifact@v4
+        with:
+          name: security-analysis
+          path: scorecard.sarif
+          retention-days: 30
+
+  process-results:
+    name: Process Security Results
+    needs: analyze
+    runs-on: ubuntu-latest
+
+    steps:
+      - name: 🔽 Download Analysis Results
+        uses: actions/download-artifact@v4
+        with:
+          name: security-analysis
+
       - name: 📊 Process Results
         id: process
-        uses: actions/github-script@60a0d83039c74a4aee543508d2ffcb1c3799cdea # v7.0.1
+        uses: actions/github-script@v7.0.1
         with:
           script: |
             const fs = require('fs');
-            const resultsFile = process.env.SCORECARD_FILE;
+            const resultsFile = 'scorecard.sarif';
 
             if (!fs.existsSync(resultsFile)) {
               throw new Error('Results file not found');
@@ -96,109 +107,3 @@ jobs:
 
             // Extract checks
             const checks = results.runs[0]?.results || [];
-            const highRisks = checks.filter(check => check.level === 'error');
-
-            // Generate summary
-            const overallScore = process.env.SCORE || '0';
-            const report = `## 🔒 Supply Chain Security Report\n\n` +
-              `### 📊 Overall Score: ${overallScore}/10\n\n` +
-              `### 🚨 High Risk Issues\n` +
-              (highRisks.length > 0
-                ? highRisks.map(risk => `- ${risk.message.text}`).join('\n')
-                : '✅ No high-risk issues found\n');
-
-            fs.writeFileSync('results/security-report.md', report);
-
-            core.setOutput('high-risks', highRisks.length);
-            env:
-              SCORE: ${{ steps.scorecard.outputs.overall-score }}
-              SCORECARD_FILE: ${{ github.workspace }}/scorecard.sarif
-
-      - name: 📤 Upload SARIF Results
-        uses: github/codeql-action/upload-sarif@b7cec7526559c32f1616476ff32d17ba4c59b2d6 # v3.25.5
-        with:
-          sarif_file: ${{ github.workspace }}/scorecard.sarif
-          category: supply-chain-security
-
-      - name: 📦 Upload Artifacts
-        if: always()
-        uses: actions/upload-artifact@65462800fd760344b1a7b4382951275a0abb4808 # v4.3.3
-        with:
-          name: security-analysis
-          path: |
-            ${{ github.workspace }}/scorecard.sarif
-            .github/scorecard-policy.yml
-          retention-days: 30
-
-      - name: 🏷️ Manage Labels
-        uses: actions/github-script@60a0d83039c74a4aee543508d2ffcb1c3799cdea # v7.0.1
-        with:
-          script: |
-            const labels = ['security: good', 'security: needs-improvement', 'security: high-risk'];
-            const score = parseInt(process.env.SECURITY_SCORE || '0', 10);
-
-            // Add appropriate label
-            const issueLabels = score >= 8
-              ? ['security: good']
-              : score >= 6
-              ? ['security: needs-improvement']
-              : ['security: high-risk'];
-
-            const existingLabels = await github.rest.issues.listLabelsForRepo({
-              owner: context.repo.owner,
-              repo: context.repo.repo
-            });
-
-            for (const label of labels) {
-              if (!existingLabels.data.some(existing => existing.name == label)) {
-                  await github.rest.issues.createLabel({
-                    owner: context.repo.owner,
-                    repo: context.repo.repo,
-                    name: label,
-                    color: 'ededed', // Replace with your desired color
-                  });
-              }
-
-            if (github.event_name == 'pull_request') {
-              const prNumber = context.payload.pull_request.number;
-              await github.rest.issues.addLabels({
-                owner: context.repo.owner,
-                repo: context.repo.repo,
-                issue_number: prNumber,
-                labels: issueLabels,
-              });
-            }
-        env:
-          SCORE: ${{ steps.scorecard.outputs.overall-score }}
-
-  notify:
-    needs: analyze
-    if: needs.analyze.outputs.high-risks > 0
-    runs-on: ubuntu-latest
-
-    permissions:
-      issues: write # To create notification issues
-
-    steps:
-      - name: 🚨 Security Alert
-        uses: actions/github-script@v7.0.1
-        with:
-          script: |
-            const message = `## 🚨 Supply Chain Security Alert
-
-            High risk security issues detected:
-            - Score: ${process.env.SCORE}/10
-            - High Risk Issues: ${process.env.HIGH_RISKS}
-
-            Please review the [analysis results](${process.env.GITHUB_SERVER_URL}/${process.env.GITHUB_REPOSITORY}/actions/runs/${process.env.GITHUB_RUN_ID})`;
-
-            await github.rest.issues.create({
-              owner: context.repo.owner,
-              repo: context.repo.repo,
-              title: '🚨 Supply Chain Security Issues Detected',
-              body: message,
-              labels: ['security', 'high-risk', 'needs-attention']
-            });
-        env:
-          SCORE: ${{ needs.analyze.outputs.score }}
-          HIGH_RISKS: ${{ needs.analyze.outputs.high_risks }}
