--- a/.github/workflows/scorecard.yml
+++ b/.github/workflows/scorecard.yml
@@ -1,3 +1,4 @@
+---
 # SPDX-FileCopyrightText: Open Source Security Foundation (OpenSSF)
 # SPDX-License-Identifier: Apache-2.0
 
@@ -57,18 +58,18 @@ jobs:
 
     steps:
       - name: 🔒 Harden Runner
-        uses: step-security/harden-runner@63c24ba6bd7ba022e95695ff85de572c04a18142 # v2.7.0
+        uses: step-security/harden-runner@v2.7.0
         with:
           egress-policy: audit
 
       - name: 🧰 Checkout Repository
-        uses: actions/checkout@44c2b7a8a4ea60a981eaca3cf939b5f4305c123b # v4.1.5
+        uses: actions/checkout@v4.1.5
         with:
           persist-credentials: false
 
       - name: 🔍 Run Scorecard Analysis
         id: scorecard
-        uses: ossf/scorecard-action@dc50aa9510b46c811795eb24b2f1ba02a914e534 # v2.3.3
+        uses: ossf/scorecard-action@v2.3.3
         with:
           results_file: scorecard.sarif
           results_format: sarif
@@ -85,6 +86,13 @@ jobs:
     name: Process Security Results
     needs: analyze
     runs-on: ubuntu-latest
+
+    permissions:
+      contents: read
+
+    outputs:
+      high-risks: ${{ steps.process.outputs.high-risks }}
+      overall-score: ${{ steps.process.outputs.overall-score }}
 
     steps:
       - name: 🔽 Download Analysis Results
@@ -103,7 +111,4 @@ jobs:
             if (!fs.existsSync(resultsFile)) {
               throw new Error('Results file not found');
             }
-            const results = JSON.parse(fs.readFileSync(resultsFile, 'utf8'));
-
-            // Extract checks
-            const checks = results.runs[0]?.results || [];
+            const results =
