--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -34,12 +34,13 @@ jobs:
         with:
           egress-policy: audit
 
-      - name: 🧰 Checkout Repository
+      - name: 🧐 Checkout Repository
         uses: actions/checkout@11bd71901bbe5b1630ceea73d27597364c9af683 # v4.2.2
         with:
           fetch-depth: 0
 
       - name: 🔎 Dependency Review
+        if: github.event_name == 'pull_request'
         uses: actions/dependency-review-action@3b139cfc5fae8b618d3eae3675e383bb1769c019 # v4.5.0
 
   ui-tests:
@@ -65,7 +66,7 @@ jobs:
         with:
           egress-policy: audit
 
-      - name: 📥 Checkout
+      - name: 👅 Checkout Repository
         uses: actions/checkout@11bd71901bbe5b1630ceea73d27597364c9af683 # v4.2.2
 
       - name: 🐍 Setup Python
@@ -77,38 +78,12 @@ jobs:
             .github/workflows/requirements.txt
             pyproject.toml
 
-      - name: 🎨 Setup Linux Display
-        if: runner.os == 'Linux'
-        run: |
-          sudo apt-get update
-          sudo apt-get install -y \
-            libegl1 \
-            libxkbcommon-x11-0 \
-            libxcb-icccm4 \
-            libxcb-image0 \
-            libxcb-keysyms1 \
-            libxcb-randr0 \
-            libxcb-render-util0 \
-            libxcb-xinerama0 \
-            xvfb
-          sudo Xvfb :99 -screen 0 1024x768x24 > /dev/null 2>&1 &
-
-      - name: 🪟 Setup Windows Dependencies
-        if: runner.os == 'Windows'
-        run: |
-          # python -m pip install wheel
-
-      - name: 🍎 Setup macOS Dependencies
-        if: runner.os == 'macOS'
-        run: |
-          brew install create-dmg
-
-      - name: 🔧 Install Build Tools
+      - name: 🔧 Install Dependencies
         run: |
           pip install -r .github/workflows/requirements.txt
           hatch env create test
 
-      - name: 🧪 Run UI Tests
+      - name: 🧑‍🔧 Run UI Tests
         env:
           QT_QPA_PLATFORM: offscreen
           DISPLAY: :99
@@ -120,7 +95,7 @@ jobs:
             --timeout=300 \
             --junitxml=test-results/junit.xml
 
-      - name: 📦 Upload Test Results
+      - name: 👛 Upload Test Results
         if: always()
         uses: actions/upload-artifact@v4
         with:
