--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -111,7 +111,7 @@ jobs:
     needs: [validate]
     runs-on: ubuntu-latest
     timeout-minutes: 30
-    environment: staging
+    environment: production
     outputs:
       version: ${{ steps.version.outputs.version }}
 
