--- a/.github/workflows/docs-deploy.yml
+++ b/.github/workflows/docs-deploy.yml
@@ -1,4 +1,7 @@
 ---
+# SPDX-FileCopyrightText: Jürgen Mülbert <juergen.muelbert@web.de>
+# SPDX-License-Identifier: EUPL-1.2
+
 name: Documentation Deployment
 
 on:
@@ -26,6 +29,7 @@ jobs:
     permissions:
       contents: write
       pages: write
+      issues: write
       id-token: write
 
     steps:
@@ -126,6 +130,7 @@ jobs:
         uses: actions/github-script@v7
         if: needs.deploy.result != 'success'
         with:
+          # TODO: script throws errors: Permissions, need enable write access to issues
           script: |
             const message = `❌ Documentation deployment failed!\n` +
                           `Please check: ${process.env.GITHUB_SERVER_URL}/${process.env.GITHUB_REPOSITORY}/actions/runs/${process.env.GITHUB_RUN_ID}`;
