--- a/pyproject.toml
+++ b/pyproject.toml
@@ -172,7 +172,7 @@ dependencies = [
   "mkdocs-mermaid2-plugin>=1.2.0",                    # Mermaid support
   "mkdocs-git-revision-date-localized-plugin>=1.2.0", # Gitdatum support
   "mkdocs-glightbox>=0.4.0",
-  "mkdocs-linkcheck>1.0.6",
+  "mkdocs-linkcheck>=1.0.6",
   "mike>=2.1.3",
   "mkdocstrings-python>=1.7.5",
   "pymdown-extensions>=10.13",
