--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -47,7 +47,7 @@ jobs:
     needs: validate
     runs-on: ${{ matrix.os }}
     timeout-minutes: 30
-    environment: staging
+    environment: development
     strategy:
       fail-fast: false
       matrix:
@@ -93,17 +93,12 @@ jobs:
             xvfb
           sudo Xvfb :99 -screen 0 1024x768x24 > /dev/null 2>&1 &
 
-      - name: 🪟 Setup Windows Dependencies
-        if: runner.os == 'Windows'
-        run: |
-          # python -m pip install wheel
-
       - name: 🍎 Setup macOS Dependencies
         if: runner.os == 'macOS'
         run: |
           brew install create-dmg
 
-      - name: 🔧 Install Build Tools
+      - name: 🔧 Install Python Dependencies
         run: |
           pip install -r .github/workflows/requirements.txt
           hatch env create test
@@ -120,9 +115,15 @@ jobs:
             --timeout=300 \
             --junitxml=test-results/junit.xml
 
+      - name: 📸 Capture Screenshots on Failure
+        if: failure()
+        run: |
+          mkdir -p test-artifacts/screenshots
+          python tests/pyside6/capture_screenshots.py
+
       - name: 📦 Upload Test Results
         if: always()
-        uses: actions/upload-artifact@v4
+        uses: actions/upload-artifact@65c4c4a1ddee5b72f698fdd19549f0f0fb45cf08 # v4.6.0
         with:
           name: ui-test-results-${{ matrix.os }}-py${{ matrix.python-version }}
           path: |
@@ -221,7 +222,7 @@ jobs:
           check-wheel-contents dist/*.whl
 
       - name: 📦 Store Artifacts
-        uses: actions/upload-artifact@v3
+        uses: actions/upload-artifact@65c4c4a1ddee5b72f698fdd19549f0f0fb45cf08 # v4.6.0
         with:
           name: dist
           path: |
@@ -254,7 +255,7 @@ jobs:
           egress-policy: audit
 
       - name: 📥 Download Artifacts
-        uses: actions/download-artifact@v3
+        uses: actions/upload-artifact@65c4c4a1ddee5b72f698fdd19549f0f0fb45cf08 # v4.6.0
         with:
           name: dist
           path: dist/
